# simdstring.mbt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  moon.mod.json  moon.pkg.json  top.mbt
avx2/: avx2.mbti  common.h  has_prefix.c  moon.pkg.json
bench/starts_with/: main.mbt  moon.pkg.json
internal/avx2/: contains_char.c  has_prefix.mbt
internal/scalar/: has_prefix.c
internal/sse4_2/: contains_char.mbt  has_prefix.c
scalar/: common.h  contains_char.mbt  has_prefix.mbt  moon.pkg.json  scalar.mbti
scripts/: configure.py
src/: common.h  contains_char.c  contains_char.mbt  find_char.c  find_char.mbt  moon.pkg.json  rev_find_char.c  rev_find_char.mbt  simdstring.mbti  top.mbt
src/bench/contains_char/: contains_char.mbti  main.mbt  moon.pkg.json
src/bench/has_prefix/: has_prefix.mbti  starts_with.mbti
src/bench/has_suffix/: has_suffix.mbti  main.mbt
src/benches/: contains_char.mbt  moon.pkg.json
src/internal/avx2/: avx2.mbti  contains_char.mbt  has_prefix.c  has_suffix.c  has_suffix.mbt  moon.pkg.json
src/internal/scalar/: contains_char.c  has_prefix.c  has_suffix.c  has_suffix.mbt  scalar.mbti
src/internal/sse4_2/: has_prefix.c  has_prefix.mbt  has_suffix.c  has_suffix.mbt  sse4_2.mbti
src/main/: main.mbt  moon.pkg.json
sse4_2/: common.h  contains_char.c  sse4_2.mbti
